tests/ui/traits/fn-call-mismatch/fnonce-extra-args-issue-149866.stderr
error[E0057]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/fnonce-extra-args-issue-149866.rs:11:5
   |
LL |     f(u, u)
   |     ^    - unexpected argument #2 of type `U`
   |
note: callable defined here
  --> $DIR/fnonce-extra-args-issue-149866.rs:9:8
   |
LL |     F: FnOnce(U) -> U,
   |        ^^^^^^^^^^^^^^
help: remove the extra argument
   |
LL -     f(u, u)
LL +     f(u)
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0057`.
